# Dynamic-Fast-Buffers

./: DYNAMIC_FAST_BUFFERS_LICENSE.txt  Makefile  README.html  README.odt
DynamicFastBuffers/doc/: DFB - User Manual.odt  DFB - User Requirements Document.odt  DynamicFastBuffers_v0.1.odp
DynamicFastBuffers/doc/performance tests/: Performance_Tests.ods
DynamicFastBuffers/include/cpp/: BytecodeAPI.h
DynamicFastBuffers/lib/i86Win32VS2010/: DynamicFastBuffers.exp  DynamicFastBuffers.lib  DynamicFastBuffersd.exp  DynamicFastBuffersd.ilk  DynamicFastBuffersd.lib  DynamicFastBuffersz.lib  DynamicFastBufferszd.lib
DynamicFastBuffers/lib/x64Win64VS2010/: DynamicFastBuffers.exp  DynamicFastBuffers.lib  DynamicFastBuffersd.exp  DynamicFastBuffersd.ilk  DynamicFastBuffersd.lib  DynamicFastBuffersz.lib  DynamicFastBufferszd.lib
DynamicFastBuffers/src/cpp/: CommonData.cpp  TypecodeAPI.cpp
DynamicFastBuffers/win32/VS2010/: DynamicFastBuffers.sln
building/makefiles/: dfb.mk
doc/: DFB - Detailed Design Document.odt  DFB - Installation Manual.odt  DFB - User Manual.odt  DFB - User Requirements Document.odt  DynamicFastBuffers.odp  DynamicFastBuffers_v0.1.odp  DynamicFastBuffers_v0.1_Performance.odp  URD.ods
doc/performance tests/: Performance_LINUX.xlsx  Performance_Tests.ods  Performance_WIN.xlsx  code_presentation..cpp  performance_comparison.txt  performance_comparison_protobuf_dfb.txt
examples/c++/HelloWorldDFB/: HelloWorldDFB-i86Win32.cpp  HelloWorldDFB-i86Win32VS2010.sln  HelloWorldDFB-i86Win32VS2010.vcxproj  HelloWorldDFB-i86Win32VS2010.vcxproj.filters  HelloWorldDFB-x64Win64.cpp  HelloWorldDFB-x64Win64VS2010.sln  HelloWorldDFB-x64Win64VS2010.vcxproj  HelloWorldDFB-x64Win64VS2010.vcxproj.filters  hwi86.mk  hwx64.mk
include/cpp/: BytecodeAPI.h  CommonData.h  DFB_dll.h  DFB_version.h  SerializerAPI.h  TypecodeAPI.h
include/cpp/eProsima_cpp/: eProsimaLog.h  eProsimaQueue.h  eProsimaThread.h  eProsima_cpp_dll.h
include/cpp/exceptions/: NotEnoughParamsException.h  WrongParamException.h  WrongTypeException.h
include/dfb/: BytecodeAPI.h  CommonData.h  DFB_dll.h  SerializerAPI.h  TypecodeAPI.h
include/dfb/exceptions/: NotEnoughParamsException.h  WrongParamException.h  WrongTypeException.h
src/cpp/: BytecodeAPI.cpp  CommonData.cpp  SerializerAPI.cpp  TypecodeAPI.cpp
utils/: PerformanceDFB.sln  PerformanceDFB.vcxproj  main.cpp
utils/doxygen/: doxyfile
utils/installers/dfb/linux/: DynamicFastBuffers.spec  Makefile.am  configure.ac  include_Makefile.am  setup_linux.sh
utils/pcTests/: Configurations.xlsx
utils/performanceTests/: entorno_ejecución_pruebas.txt  instrucciones_clonezilla.txt
utils/scripts/: build_dfb.bat  package_dynamicfastbuffers.bat  package_dynamicfastbuffers.sh
win32/VS2010/: DynamicFastBuffers.sln
(+359 files in other folders)
